# lithium

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py
django_project/: settings.py
templates/: _base.html
templates/pages/: home.html
