[project]
name = "lithium"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "django ~=6.0",
  "django-allauth[openid,socialaccount] ~=65.15",
  "django-debug-toolbar ~=6.3",
  "crispy-bootstrap5 ~=2026.3",
  "gunicorn ~=25.3",
  "psycopg[binary] ~=3.3",
  "whitenoise ~=6.12",
]

[dependency-groups]
dev = [
  "typing_extensions ~=4.12",
]
